05/04/2022:
	- Removed unnecessary FCGI include from Main.cc (already included in Writer.h)


04/04/2022:
	- Switched mktime() to timegm() in FIF.cc, which fixes occasional errors when using mktime(). timegm() is not only faster,
	  but avoids having to set our timezone with tzset(), and is therefore simpler. This change reverses commit
	  https://github.com/ruven/iipsrv/commit/69b6a572147aaacf055b134af591559156a34d2e which is no longer relevant.
	- Modification to the Windows implementation of strptime to fix crashing (https://github.com/ruven/iipsrv/issues/208)
	  when parsing if-modified-since time stamps.


31/03/2022:
	- Modified TIFFOpen() mode parameter to activate on-demand strip/tile offset/bytecount array loading. This functionality
	  is available in libtiff 4.1.0 onwards and enables significantly faster loading of very large TIFF files


30/03/2022:
	- Modified configure.ac to separate SSE3 and AVX2 Kakadu support detection from version detection. Should fix
	  compilation problem on ARM (https://github.com/ruven/iipsrv/pull/38#issuecomment-1072874587)


21/01/2022:
	- Added fast scale_to_8bit() function to Transform class to allow 16 and 32 bit fixed point data to be efficiently
	  scaled down to 8 bit without use of the floating point image processing pipeline


19/01/2022:
	- Added missing minmax variable to View class to indicate a user-defined min/max. Forces use of the floating point
	  image processing pipeline in CVT.cc and JTL.cc


16/01/2022:
	- Modified TileManager.cc to verify that malloc() has correctly allocated memory.
	- Updated numerical types to std::size_t in RawTile.h, TileManager.cc, KakaduImage.cc, OpenJPEG.cc and Transforms.cc
	  when allocating memory via new to avoid integer overflow - fixes remaining problems identified in
	  https://github.com/ruven/iipsrv/issues/223.


15/01/2022:
	- Added verification that image has been set in SPECTRA.cc and check on the validity of the requested tile